--- a/_layouts/homepage_cn.liquid
+++ b/_layouts/homepage_cn.liquid
@@ -6,7 +6,7 @@
     <body class="boxed-layout">
         {% include header_cn.liquid %}
       <div class="main-container">
-        {% for post in collections.posts_cn.pages %}
+        {% for post in site.posts_cn %}
                 <section>
                 <div class="container">
                     <div class="row">
