--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -18,12 +18,10 @@
                             <a href="#">CHAPTERS</a>
                             <ul>
 
-                              {% for post in collections.posts.pages %}
-                              {% if post.categories contains "English" %}
+                              {% for post in site.posts_en %}
                               <li><a href="/{{ post.permalink }}">
                                   <span class="title">{{ post.title }}</span> </a>
                               </li>
-                              {% endif %}
                               {% endfor %}
 
                             </ul>
