--- a/_layouts/homepage_cn.liquid
+++ b/_layouts/homepage_cn.liquid
@@ -31,7 +31,7 @@
                             </div>
                             <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-                            <a class="mb48 mb-xs-32 btn btn-lg" href="{{ post.permalink}} ">继续</a>
+                            <a class="mb48 mb-xs-32 btn btn-lg" href="{{ post.url}} ">继续</a>
                         </div>
                     </div>
                             <hr>
