Fixed header chapters url formatting

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -19,7 +19,7 @@
                             <ul>
 
                               {% for post in site.posts_en %}
-                              <li><a href="/{{ post.url }}">
+                              <li><a href="{{ post.url }}">
                                   <span class="title">{{ post.title }}</span> </a>
                               </li>
                               {% endfor %}
